# cicd-sandbox

./: .gitignore  cicd-sandbox.code-workspace  foo.py  makefile  pyproject.toml
.github/workflows/: cut-release.yaml  make-release.yaml  publish-release-candidate.yaml  publish-release.yaml  run-tests.yaml  sync-branches.yaml  sync-master.yaml  sync-push-to-master copy.yaml  sync-push-to-master.yaml  sync-push-to-release.yaml  sync-release.yaml  sync.yaml  tag-prerelease-version.yaml  tag-stable-version.yaml  tag-version.yaml
scripts/: build-distribution.sh  bump-version.sh  cut-release-candidate.sh  cut-release.sh  split-version.sh
src/foo/: __init__.py  bar.py
